--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -1,20 +1,33 @@
 .header {
-  min-height: 60vh;
+  height: 100vh;
   background: #0c0c0c;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: relative;
+
+  .title-slots-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 60%;
+    border: 2px solid red;
+  }
+
+  .description {
+    border: 2px solid blue;
+    width: 40%;
+  }
 
   &__title {
     margin: 0;
     color: white;
     font-size: 40px;
     letter-spacing: 6px;
+    font-weight: 100;
 
     &--highlighted {
       font-size: 70px;
+      font-weight: 900;
     }
   }
 
@@ -40,6 +53,6 @@
   //   }
 
   &__image {
-    width: 40%;
+    width: 800px;
   }
 }
