Add new logic, example episode data and update styling for Slots

--- a/client/src/Components/Slots/index.scss
+++ b/client/src/Components/Slots/index.scss
@@ -20,7 +20,7 @@
     width: 300px;
     height: 300px;
     overflow: hidden;
-    background-color: grey;
+    background-color: #ffffffc2;
     border-radius: 2px;
     border: 1px solid lightgrey;
     color: white;
