--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -1,7 +1,19 @@
 .header {
   height: 100vh;
-  background: #0c0c0c;
+  //   background: #0c0c0c;
   display: flex;
+  position: relative;
+  background: linear-gradient(90deg, #0e0e0e 15%, rgba(31, 31, 31, 0));
+
+  &__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
 
   .title-slots-container {
     display: flex;
@@ -9,13 +21,58 @@
     align-items: flex-start;
     justify-content: flex-start;
     position: relative;
-    width: 60%;
-    border: 2px solid red;
+    width: 55%;
+    // border: 2px solid red;
+    // background: rgb(17, 17, 17);
   }
 
-  .description {
-    border: 2px solid blue;
-    width: 40%;
+  .details {
+    // border: 2px solid blue;
+    width: 45%;
+    color: white;
+    position: relative;
+
+    &__episode-number {
+      position: absolute;
+      top: 15px;
+      left: 30px;
+      margin: 0;
+      font-size: 8rem;
+      color: #ffffff6e;
+    }
+
+    &__title {
+      font-size: 70px;
+    }
+
+    &__description {
+      font-size: 40px;
+    }
+
+    &__secondary-details {
+      //   border: 1px solid red;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: flex-start;
+
+      .secondary-detail {
+        margin: 0 4rem 2rem 0;
+        // border: 1px solid orange;
+
+        &__title {
+          font-size: 25px;
+          margin: 0;
+          color: #ffffffa8;
+        }
+
+        &__content {
+          font-size: 50px;
+          margin: 0;
+          font-weight: 900;
+        }
+      }
+    }
   }
 
   &__title {
@@ -33,8 +90,18 @@
 
   .img-roll-btn-container {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
+
+    // video {
+    //   object-fit: cover;
+    //   width: 100%;
+    //   height: 100%;
+    //   position: fixed;
+    //   top: 0;
+    //   left: 0;
+    // }
   }
 
   //   .roll-btn {
