--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -62,7 +62,7 @@
 
         &__title {
           font-size: 25px;
-          margin: 0;
+          margin: 0 0 -10px 0;
           color: #ffffffa8;
         }
 
