--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -18,19 +18,33 @@
   .title-slots-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     position: relative;
-    width: 55%;
+    // width: 55%;
+    flex: 1;
     // border: 2px solid red;
     // background: rgb(17, 17, 17);
   }
 
   .details {
     // border: 2px solid blue;
-    width: 45%;
+    flex: 1;
+    //   width: 45%;
+    // height: 80vh;
     color: white;
     position: relative;
+    padding: 2rem;
+    background: #00000036;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    box-shadow: 30px 20px 0px #ff0000a6;
+
+    &:empty {
+      box-shadow: none !important;
+    }
 
     &__episode-number {
       position: absolute;
@@ -43,10 +57,15 @@
 
     &__title {
       font-size: 70px;
+      padding: 0;
+      margin: 0;
+      max-width: 80%;
+      text-align: end;
     }
 
     &__description {
       font-size: 40px;
+      margin-top: 6rem;
     }
 
     &__secondary-details {
@@ -57,7 +76,7 @@
       align-items: flex-start;
 
       .secondary-detail {
-        margin: 0 4rem 2rem 0;
+        margin: 2rem;
         // border: 1px solid orange;
 
         &__title {
@@ -90,8 +109,8 @@
 
   .img-roll-btn-container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    // flex-direction: column;
+    justify-content: center;
     width: 100%;
 
     // video {
