--- a/client/src/Components/Slots/index.scss
+++ b/client/src/Components/Slots/index.scss
@@ -36,6 +36,20 @@
     width: 100%;
     transition: top ease-in-out 0.5s;
     text-align: center;
+
+    div {
+      span {
+        svg {
+          height: 200px;
+          width: 200px;
+
+          path {
+            fill: #ed3501;
+            // stroke: #ed3501;
+          }
+        }
+      }
+    }
   }
 
   .roll {
