--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -26,16 +26,18 @@
 
   .title-slots-container {
     display: flex;
-    flex-direction: column;
     align-items: center;
     position: relative;
     padding-left: 2rem;
 
     &--homepage {
       justify-content: center;
+      flex-direction: column;
     }
 
     &--details {
+      align-items: flex-start;
+      flex-direction: column;
       justify-content: space-between;
     }
   }
@@ -43,7 +45,7 @@
   .details {
     // border: 2px solid blue;
     // flex: 1;
-    width: 20%;
+    width: 25%;
     //   width: 45%;
     color: white;
     position: relative;
@@ -133,7 +135,7 @@
       width: 800px;
       position: absolute;
       left: 0px;
-      top: 0px;
+      bottom: 0px;
       opacity: 0.3;
       z-index: -1;
     }
