--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -47,13 +47,30 @@
       justify-content: space-between;
     }
 
-    .episode-title {
-      font-size: 12rem;
-      color: white;
-      letter-spacing: 2rem;
-      margin: 0;
-      opacity: 0.8;
-      text-align: left;
+    .episode-title-container {
+      margin-bottom: 7rem;
+      width: 100vw;
+
+      .episode-title {
+        font-weight: 100;
+        font-size: 6rem;
+        color: white;
+        letter-spacing: 2rem;
+        margin: 0;
+        opacity: 0.8;
+        text-align: left;
+        line-height: 0;
+        animation: glitch1 3.5s infinite;
+
+        &:nth-child(2) {
+          animation: glitch2 2.5s infinite;
+          color: rgb(255, 255, 255);
+        }
+        &:nth-child(3) {
+          animation: glitch3 2.5s infinite;
+          color: rgb(158, 158, 158);
+        }
+      }
     }
   }
 
@@ -148,5 +165,170 @@
     // flex-direction: column;
     justify-content: center;
     width: 100%;
+  }
+}
+
+@keyframes glitch1 {
+  0% {
+    transform: none;
+    opacity: 1;
+  }
+  8% {
+    transform: skew(-0.5deg, -0.9deg);
+    opacity: 0.75;
+  }
+  10% {
+    transform: none;
+    opacity: 1;
+  }
+  28% {
+    transform: none;
+    opacity: 1;
+  }
+  30% {
+    transform: skew(0.8deg, -0.1deg);
+    opacity: 0.75;
+  }
+  33% {
+    transform: none;
+    opacity: 1;
+  }
+  45% {
+    transform: none;
+    opacity: 1;
+  }
+  55% {
+    transform: skew(-1deg, 0.2deg);
+    opacity: 0.75;
+  }
+  60% {
+    transform: none;
+    opacity: 1;
+  }
+  72% {
+    transform: none;
+    opacity: 1;
+  }
+  78% {
+    transform: skew(0.4deg, 1deg);
+    opacity: 0.75;
+  }
+  80% {
+    transform: none;
+    opacity: 1;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+@keyframes glitch2 {
+  0% {
+    transform: none;
+    opacity: 0.25;
+  }
+  8% {
+    transform: translate(-2px, -3px);
+    opacity: 0.5;
+  }
+  10% {
+    transform: none;
+    opacity: 0.25;
+  }
+  28% {
+    transform: none;
+    opacity: 0.25;
+  }
+  30% {
+    transform: translate(-5px, -2px);
+    opacity: 0.5;
+  }
+  33% {
+    transform: none;
+    opacity: 0.25;
+  }
+  45% {
+    transform: none;
+    opacity: 0.25;
+  }
+  55% {
+    transform: translate(-5px, -1px);
+    opacity: 0.5;
+  }
+  60% {
+    transform: none;
+    opacity: 0.25;
+  }
+  72% {
+    transform: none;
+    opacity: 0.25;
+  }
+  78% {
+    transform: translate(-2px, -6px);
+    opacity: 0.5;
+  }
+  80% {
+    transform: none;
+    opacity: 0.25;
+  }
+  100% {
+    transform: none;
+    opacity: 0.25;
+  }
+}
+
+@keyframes glitch3 {
+  0% {
+    transform: none;
+    opacity: 0.25;
+  }
+  8% {
+    transform: translate(2px, 3px);
+    opacity: 0.5;
+  }
+  10% {
+    transform: none;
+    opacity: 0.25;
+  }
+  28% {
+    transform: none;
+    opacity: 0.25;
+  }
+  30% {
+    transform: translate(5px, 2px);
+    opacity: 0.5;
+  }
+  33% {
+    transform: none;
+    opacity: 0.25;
+  }
+  45% {
+    transform: none;
+    opacity: 0.25;
+  }
+  55% {
+    transform: translate(5px, 1px);
+    opacity: 0.5;
+  }
+  60% {
+    transform: none;
+    opacity: 0.25;
+  }
+  72% {
+    transform: none;
+    opacity: 0.25;
+  }
+  78% {
+    transform: translate(2px, 6px);
+    opacity: 0.5;
+  }
+  80% {
+    transform: none;
+    opacity: 0.25;
+  }
+  100% {
+    transform: none;
+    opacity: 0.25;
   }
 }
