--- a/client/src/Global.scss
+++ b/client/src/Global.scss
@@ -5,3 +5,48 @@ body {
 .section {
   //   padding: 4rem 4rem 0 4rem;
 }
+
+// Button styles
+.btn {
+  &--homepage {
+    background: white;
+    border-radius: 20px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 15px 7px 0px #fb420a;
+    font-size: 40px;
+    cursor: pointer;
+    margin: 0 auto;
+    transition: all 0.5s ease;
+  }
+
+  &--blink {
+    animation: blinkingText 1.2s infinite;
+  }
+
+  &--hide {
+    display: none !important;
+  }
+
+  &--trans-white {
+    background: transparent;
+    border: 8px solid #ffffff47 !important;
+    color: #ffffff8a !important;
+    border-radius: 999px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    cursor: pointer;
+    margin: 0 auto;
+    box-shadow: none;
+
+    &:hover {
+      border: 8px solid rgba(255, 255, 255, 0.733) !important;
+      color: rgba(255, 255, 255, 0.733) !important;
+    }
+  }
+}
