--- a/client/src/Global.scss
+++ b/client/src/Global.scss
@@ -8,18 +8,19 @@ body {
 
 // Button styles
 .btn {
+  border-radius: 999px;
+  width: 200px;
+  padding: 5px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+
   &--homepage {
     background: white;
-    border-radius: 20px;
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     box-shadow: 15px 7px 0px #fb420a;
-    font-size: 40px;
-    cursor: pointer;
-    margin: 0 auto;
-    transition: all 0.5s ease;
   }
 
   &--blink {
@@ -34,14 +35,6 @@ body {
     background: transparent;
     border: 8px solid #ffffff47 !important;
     color: #ffffff8a !important;
-    border-radius: 999px;
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 40px;
-    cursor: pointer;
-    margin: 0 auto;
     box-shadow: none;
 
     &:hover {
