--- a/client/src/Components/Slots/index.scss
+++ b/client/src/Components/Slots/index.scss
@@ -17,6 +17,7 @@
     position: relative;
     top: unset;
     left: unset;
+    margin-left: -2rem;
   }
 
   &--details {
@@ -41,6 +42,11 @@
     display: inline-block;
 
     &--homepage {
+      @include mq(0) {
+        height: 125px;
+        width: 125px;
+        margin-bottom: 1.5rem;
+      }
       @include mq(tabletS) {
         height: 175px;
         width: 175px;
@@ -76,6 +82,11 @@
   }
 
   .section--homepage {
+    @include mq(0) {
+      height: 125px;
+      width: 125px;
+      line-height: 145px;
+    }
     @include mq(tabletS) {
       height: 175px;
       width: 175px;
@@ -113,6 +124,13 @@
 
       .icon-container {
         &--homepage {
+          @include mq(0) {
+            svg {
+              height: 100px;
+              width: 100px;
+            }
+          }
+
           @include mq(tabletS) {
             svg {
               height: 150px;
@@ -158,6 +176,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &--tablet {
+      margin-left: 2rem;
+    }
 
     .btn {
       margin-right: 3rem;
