--- a/client/src/Pages/AllEpisodes/index.scss
+++ b/client/src/Pages/AllEpisodes/index.scss
@@ -1,3 +1,5 @@
+@import '../../Components/GlobalVars/index.scss';
+
 .all-episodes {
   .exit-button {
     background: transparent;
@@ -6,5 +8,45 @@
     position: absolute;
     top: 10px;
     right: 10px;
+  }
+
+  .sort-by {
+    width: 100%;
+    /* height: 100px; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    @include mq(0) {
+      padding-left: 0;
+    }
+    @include mq(tabletM) {
+      padding-left: 2rem;
+    }
+
+    .sort__main {
+      color: white;
+
+      @include mq(0) {
+        font-size: 20px;
+      }
+      @include mq(tabletM) {
+        font-size: 40px;
+      }
+    }
+
+    .btn {
+      z-index: 999;
+      @include mq(0) {
+        font-size: 20px;
+        width: 80px;
+        margin: 0 0.5rem;
+      }
+      @include mq(tabletM) {
+        font-size: 25px;
+        width: 130px;
+      }
+    }
   }
 }
