Add fade out animation to slots cta

--- a/client/src/Components/Slots/index.scss
+++ b/client/src/Components/Slots/index.scss
@@ -1,7 +1,7 @@
 @import '../GlobalVars/index.scss';
 
 .slots {
-  border: 1px solid orange;
+  //   border: 1px solid orange;
 
   margin: 2rem 0;
   position: absolute;
@@ -166,7 +166,7 @@
   .roll {
     width: 215px;
     cursor: pointer;
-    background-color: yellow;
+    // background-color: yellow;
     padding: 10px;
     text-align: center;
     font-size: 20px;
