Fix episode title container width bug

--- a/client/src/Components/Header/index.scss
+++ b/client/src/Components/Header/index.scss
@@ -88,6 +88,7 @@
     .episode-title-container {
       margin-bottom: 7rem;
       margin-left: 2rem;
+      width: 100vw;
 
       &--tablet {
         margin-bottom: 0 !important;
